--- a/programming/python.html
+++ b/programming/python.html
@@ -26,6 +26,19 @@
             <div class="content">
                 
 
+<h2 id="toc_0.1">Articles</h2>
+<ul>
+<li>
+
+
+</ul>
+
+<h2 id="toc_0.2">Tips</h2>
+<ul>
+<li>
+
+</ul>
+
             </div>
             <div class="footer">
                 <p>&copy; 2012 Bravluna's wiki system</p>
