--- a/poems/foreign.html
+++ b/poems/foreign.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› Git</title>
+        <title>B.Wiki› 外国诗歌</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,17 +21,10 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>Git</h1>
+                <h1>外国诗歌</h1>
             </div>
             <div class="content">
                 
-
-<h2 id="toc_0.1">Articles</h2>
-<ul>
-<li>
-<a href="2012_5_17.html">git clone 做了什么？</a>
-
-</ul>
 
             </div>
             <div class="footer">
