--- a/tools/2012_5_14.html
+++ b/tools/2012_5_14.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› Git</title>
+        <title>B.Wiki› 知识屏蔽 线索化 多元</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,17 +21,25 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>Git</h1>
+                <h1>知识屏蔽 线索化 多元</h1>
             </div>
             <div class="content">
                 
 
-<h2 id="toc_0.1">Articles</h2>
-<ul>
-<li>
-<a href="2012_5_17.html">git clone 做了什么？</a>
+<p>
+王爽在他的书《汇编语言》前言里提出了学习的三个方法：知识屏蔽，线索化，多元
+</p>
 
-</ul>
+<p>
+我想有一定学习经验的人都有意或无意地运用这三个方法，并体会到它带来的好处。我对教育学并没有深入的研究，以前在学校时看到有各种各样的理论，不过我想这能掌握这三个方法就足够了。
+</p>
+
+
+
+
+<p>
+重复和回忆也是多元的一种
+</p>
 
             </div>
             <div class="footer">
