--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› Javascript</title>
+        <title>B.Wiki› JavaScript</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,7 +21,7 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>Javascript</h1>
+                <h1>JavaScript</h1>
             </div>
             <div class="content">
                 
