--- a/tools/approach.html
+++ b/tools/approach.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› Git</title>
+        <title>B.Wiki› Approach</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,7 +21,7 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>Git</h1>
+                <h1>Approach</h1>
             </div>
             <div class="content">
                 
@@ -29,7 +29,10 @@
 <h2 id="toc_0.1">Articles</h2>
 <ul>
 <li>
-<a href="2012_5_17.html">git clone 做了什么？</a>
+<a href="2012_5_14.html">知识屏蔽 线索化 多元</a>
+
+<li>
+<a href="2012_5_15.html">由一本教材想到的</a>
 
 </ul>
 
