--- a/poems/2012_6_18.html
+++ b/poems/2012_6_18.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› 外国诗歌</title>
+        <title>B.Wiki› 雨</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,16 +21,86 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>外国诗歌</h1>
+                <h1>雨</h1>
             </div>
             <div class="content">
                 
 
-<ul>
-<li>
-<a href="2012_6_18.html">雨</a>
+<p>
+突然间黄昏变得明亮
+</p>
 
-</ul>
+<p>
+因为此刻正有细雨在落下
+</p>
+
+<p>
+或曾经落下，下雨
+</p>
+
+<p>
+无疑是在过去发生的一件事
+</p>
+
+<p>
+--
+</p>
+
+<p>
+谁听见雨落下　谁就回想起
+</p>
+
+<p>
+那个时候　幸福的命运向他呈现了
+</p>
+
+<p>
+一朵叫玫瑰的花
+</p>
+
+<p>
+和它奇妙的　鲜红的色彩。
+</p>
+
+<p>
+--
+</p>
+
+<p>
+这蒙住了窗玻璃的细雨
+</p>
+
+<p>
+必将在被遗弃的郊外
+</p>
+
+<p>
+在某个不复存在的庭院里洗亮
+</p>
+
+<p>
+--
+</p>
+
+<p>
+架上的黑葡萄。潮湿的幕色
+</p>
+
+<p>
+带给我一个声音　我渴望的声音
+</p>
+
+<p>
+我的父亲回来了　他没有死去。
+</p>
+
+<p>
+-- <em>博尔赫斯</em>
+</p>
+
+<p>
+-<em>2012.6.18</em>-
+</p>
 
             </div>
             <div class="footer">
