--- a/tools/2012_5_17.html
+++ b/tools/2012_5_17.html
@@ -26,6 +26,32 @@
             <div class="content">
                 
 
+<p>
+<code>git clone</code> 用来克隆一个仓库，在本机上或是 git 服务器上，若是本机上的仓库就无须使用 git 或 http 协议，直接 <code>git clone path</code> 即可。克隆后，<code>origin</code> 即代表被克隆的源仓库，<code>origin/master</code> 代表源仓库的 master 分支，本地也产生了一个 master 分支。
+</p>
+
+<p>
+可能这条命令让人疑惑，比如：为什么克隆后 working directory 就有文件？为什么用 <code>git push origin</code> 就可以直接提交数据？按我的理解，<code>git clone</code> 实际是个组合命令，它做了以下几件事情：
+</p>
+<ol>
+<li>
+<code>git init</code> 初始化本地仓库
+
+<li>
+<code>git remote add origin url</code> 添加源仓库 url，用 origin 指代
+
+<li>
+<code>git fetch origin</code> 从源仓库拉取数据，这会把源 .git 目录复制过来
+
+<li>
+<code>git checkout -b master origin/master</code> 创建跟踪分支，即 master 跟踪 origin/master，检出数据。“跟踪分支”这里解释下，从源仓库 checkout 出来的本地分支就称为跟踪分支，这也是 <code>git fetch/pull/push</code> 能直接工作的原因。
+
+</ol>
+
+<p>
+-<em>2012.5.17</em>-
+</p>
+
             </div>
             <div class="footer">
                 <p>&copy; 2012 Bravluna's wiki system</p>
