--- a/poems/2012_6_26.html
+++ b/poems/2012_6_26.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› 中国诗歌</title>
+        <title>B.Wiki› How do i love thee</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,19 +21,75 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>中国诗歌</h1>
+                <h1>How do i love thee</h1>
             </div>
             <div class="content">
                 
 
-<ul>
-<li>
-<a href="2012_6_11.html">采桑女</a>
+<p>
+How do I love thee? Let me count the ways.
+</p>
 
-<li>
-<a href="2012_6_22.html">东方山脉</a>
+<p>
+I love thee to the depth and breadth and height
+</p>
 
-</ul>
+<p>
+My soul can reach, when feeling out of sight
+</p>
+
+<p>
+For the ends of being and ideal grace.
+</p>
+
+<p>
+I love thee to the level of every day's
+</p>
+
+<p>
+Most quiet need, by sun and candle-light.
+</p>
+
+<p>
+I love thee freely, as men strive for right.
+</p>
+
+<p>
+I love thee purely, as they turn from praise.
+</p>
+
+<p>
+I love thee with the passion put to use
+</p>
+
+<p>
+In my old griefs, and with my childhood's faith.
+</p>
+
+<p>
+I love thee with a love I seemed to lose
+</p>
+
+<p>
+With my lost saints. I love thee with the breath,
+</p>
+
+<p>
+Smiles, tears, of all my life; and, if God choose,
+</p>
+
+<p>
+I shall but love thee better after death.
+</p>
+
+<p>
+<br />
+-- <em>Elizabeth Barrett Browning</em>
+</p>
+
+<p>
+<em>-2012.6.26-</em>
+</p>
 
             </div>
             <div class="footer">
