--- a/poems/foreign.html
+++ b/poems/foreign.html
@@ -30,11 +30,14 @@
 <li>
 <a href="2012_6_18.html">雨</a>
 
+<li>
+<a href="2012_6_26.html">How do i love thee</a>
+
 </ul>
 
             </div>
             <div class="footer">
-                <p>&copy; 2012 Bravluna's wiki system</p>
+                <p> &copy; Bravluna's wiki system </p>
             </div>
         </div>
     </body>
