--- a/programming/python.html
+++ b/programming/python.html
@@ -41,7 +41,7 @@
 
             </div>
             <div class="footer">
-                <p>&copy; 2012 Bravluna's wiki system</p>
+                <p> &copy; Bravluna's wiki system </p>
             </div>
         </div>
     </body>
