--- a/tools/2012_5_17.html
+++ b/tools/2012_5_17.html
@@ -27,7 +27,7 @@
                 
 
 <p>
-<code>git clone</code> 用来克隆一个仓库，在本机上或是 git 服务器上，若是本机上的仓库就无须使用 git 或 http 协议，直接 <code>git clone path</code> 即可。克隆后，<code>origin</code> 即代表被克隆的源仓库，<code>origin/master</code> 代表源仓库的 master 分支，本地也产生了一个 master 分支。
+<code>git clone</code> 用来克隆一个仓库，在本机上或是 git 服务器上。若是本机上的仓库就无须使用 git 或 http 协议，直接 <code>git clone path</code> 即可。克隆后，<code>origin</code> 即代表被克隆的源仓库，<code>origin/master</code> 代表源仓库的 master 分支，本地也产生了一个 master 分支。
 </p>
 
 <p>
@@ -54,7 +54,7 @@
 
             </div>
             <div class="footer">
-                <p>&copy; 2012 Bravluna's wiki system</p>
+                <p> &copy; Bravluna's wiki system </p>
             </div>
         </div>
     </body>
