--- a/poems/2012_6_18.html
+++ b/poems/2012_6_18.html
@@ -43,10 +43,7 @@
 </p>
 
 <p>
---
-</p>
-
-<p>
+<br />
 谁听见雨落下　谁就回想起
 </p>
 
@@ -63,10 +60,7 @@
 </p>
 
 <p>
---
-</p>
-
-<p>
+<br />
 这蒙住了窗玻璃的细雨
 </p>
 
@@ -79,10 +73,7 @@
 </p>
 
 <p>
---
-</p>
-
-<p>
+<br />
 架上的黑葡萄。潮湿的幕色
 </p>
 
@@ -95,6 +86,7 @@
 </p>
 
 <p>
+<br />
 -- <em>博尔赫斯</em>
 </p>
 
@@ -104,7 +96,7 @@
 
             </div>
             <div class="footer">
-                <p>&copy; 2012 Bravluna's wiki system</p>
+                <p> &copy; Bravluna's wiki system </p>
             </div>
         </div>
     </body>
