--- a/tools/2012_5_15.html
+++ b/tools/2012_5_15.html
@@ -52,7 +52,7 @@
 
             </div>
             <div class="footer">
-                <p>&copy; 2012 Bravluna's wiki system</p>
+                <p> &copy; Bravluna's wiki system </p>
             </div>
         </div>
     </body>
