--- a/world/knowledge.html
+++ b/world/knowledge.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Bravluna's wiki system">
         <meta name="author" content="Bravluna">
-        <title>B.Wiki› 中国诗歌</title>
+        <title>B.Wiki› Knowledge</title>
     </head>
     <body>
         <div class="navbar">
@@ -21,17 +21,14 @@
         
         <div class="container">
             <div class="page-header">
-                <h1>中国诗歌</h1>
+                <h1>Knowledge</h1>
             </div>
             <div class="content">
                 
 
 <ul>
 <li>
-<a href="2012_6_11.html">采桑女</a>
-
-<li>
-<a href="2012_6_22.html">东方山脉</a>
+<a href="2012_6_25.html">总共有多少个汉字？</a>
 
 </ul>
 
